# icongen

./: README.md  pyproject.toml
Formula/: icongen.rb
icongen/: cli.py
